--- a/src/components/gallery-grid/gallery-grid.css
+++ b/src/components/gallery-grid/gallery-grid.css
@@ -1,17 +1,25 @@
 :host{
-  background-color: rgb(212, 212, 212);
+  background-color:transparent;
 }
 .red{
   transform: scale(1.07);
   border: 5px solid rgb(255, 251, 0);
 }
+.parent{
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  opacity: 0.6;
+  background-color: rgb(0, 0, 0);
+  z-index: -1;
+}
 .baseParent{
   padding: 40px;
   height: 86vh;
-  background-color: rgb(54, 54, 54);
+  background-color: transparent;
 }
 .cancel{
-  color: red;
+  color: rgb(4, 0, 255);
   font-size: 40px;
   float: right;
   margin-right: 70px;
@@ -48,6 +56,8 @@ z-index: 1;
 }
 .child,.sub2{
   background-size: cover;
+  border-radius: 10px;
+  cursor: pointer;
 }
 .child1{
   background-image: url(../asset/1.1.jpg);
@@ -85,7 +95,8 @@ z-index: 1;
 label{
   cursor: pointer;
   font-size: 60px;
-  color: rgb(95, 183, 255);
+  font-weight: bold;
+  color: rgb(255, 255, 255);
 }
 
 
