--- a/src/components/demo-adesa/demo-adesa.css
+++ b/src/components/demo-adesa/demo-adesa.css
@@ -1,3 +1,5 @@
+@import url(../asset/example.css);
+
 :host {
   display: block;
   margin: 0px 50px;
@@ -18,12 +20,12 @@ select{
   margin-bottom: 10px;
 }
 .imag{
-  display: grid;
+  display: var(--grid);
   grid-template-rows: 1fr 0.2fr;
   cursor: pointer;
 }
 .logout{
-display: grid;
+display: var(--grid);
 grid-template-rows: 1fr 1fr 1fr;
 text-align: right;
 }
@@ -34,7 +36,7 @@ p{
 }
 .head{
   font-size: 50px;
-  color: red;
+  color: var(--blue-color);
 }
 button{
   color: rgb(255, 255, 255);
@@ -55,11 +57,11 @@ li{
   list-style: none;
 }
 .child1{
-display: grid;
+display: var(--grid);
 grid-template-columns: 0.5fr 1fr 1fr;
 }
 .parent{
-  display: grid;
+  display: var(--grid);
   height: 100vh;
   margin: 0px 50px;
   grid-template-rows: 3fr 1fr 1fr 1fr 5fr;
@@ -68,7 +70,7 @@ grid-template-columns: 0.5fr 1fr 1fr;
   height: auto;
 }
 .child3{
-  display: grid;
+  display: var(--grid);
   grid-template-columns: 1fr 0.15fr;
   column-gap: 50px;
   align-items: center;
@@ -86,7 +88,7 @@ button,input{
   background-color: rgb(216, 255, 240);
 }
 ul{
-display: grid;
+display: var(--grid);
 grid-template-columns: auto auto auto auto auto auto auto auto;
 column-gap: 30px;
 width: fit-content;
@@ -94,11 +96,11 @@ padding-inline-start: 0px;
 
 }
 .child4,.child5{
-  display: grid;
+  display: var(--grid);
   grid-template-rows: 0.2fr 1fr;
 }
 .childi{
-  display: grid;
+  display: var(--grid);
   grid-template-columns: 0.7fr 1fr;
   column-gap: 20px;
 }
@@ -110,7 +112,7 @@ padding-inline-start: 0px;
 }
 .child4 ol li{
   padding-top: 10px;
-  color: red;
+  color: var(--blue-color);
 }
 .child5 ul{
   column-gap: 0;
